# HW_10_WEB

./: pyproject.toml
quotes/: manage.py
quotes/quotes/: wsgi.py
quotes/quotes_app/: apps.py  forms.py  models.py  urls.py  views.py
quotes/quotes_app/templatetags/: extract.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: signin.html  signout.html  signup.html
quotes/utils/: migration.py
