[tool.poetry]
name = "HW_10_WEB"
version = "0.1.0"
description = ""
authors = ["SaitovMykyta <rassskoll@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg2 = "^2.9.9"
pymongo = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"